--- a/landing-page/package.json
+++ b/landing-page/package.json
@@ -21,9 +21,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run pack",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pack": "tar.exe acvf build.zip ./build/*"
   },
   "browserslist": {
     "production": [
