--- a/new-space-systems/package.json
+++ b/new-space-systems/package.json
@@ -4,12 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@brainhubeu/react-carousel": "^2.0.4",
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-simply-carousel": "8.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -35,7 +35,6 @@
     ]
   },
   "devDependencies": {
-    "@types/brainhubeu__react-carousel": "^2.0.5",
     "patch-package": "^6.5.1"
   }
 }
